<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath/>
		<!-- lookup parent from repository -->
	</parent>
	<groupId>com.anushibinj</groupId>
	<artifactId>veemailer</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ve-emailer</name>
	<description>Email Notification Broker</description>
	<properties>
		<java.version>17</java.version>
		<spring-ai.version>1.0.0-M6</spring-ai.version>
		<testcontainers.version>1.20.4</testcontainers.version>
		<!-- Skip integration tests by default; activate with -Ptestcontainers -->
		<skipITs>true</skipITs>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- JWT Support -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.12.6</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.12.6</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.12.6</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>com.microfocus.adm.almoctane.sdk</groupId>
			<artifactId>sdk-src</artifactId>
			<version>25.4</version>
		</dependency>

		<!-- Spring AI OpenAI integration -->
		<dependency>
			<groupId>org.springframework.ai</groupId>
			<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
			<version>${spring-ai.version}</version>
			<exclusions>
				<!--
					Exclude Jetty HTTP client to prevent a classpath conflict:
					Spring AI M6 pulls in jetty-client 12.x while the Octane SDK
					transitively brings in http2-hpack 9.4.x (Jetty 9). Jetty 12's
					HTTP/2 initialiser loads HpackEncoder, which in turn tries to find
					org.eclipse.jetty.util.log.Log (removed in Jetty 10+), causing a
					NoClassDefFoundError at runtime.  Without the Jetty client on the
					classpath, Spring auto-selects the JDK HTTP client instead.
				-->
				<exclusion>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>jetty-client</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.eclipse.jetty.http2</groupId>
					<artifactId>http2-client</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.eclipse.jetty.http2</groupId>
					<artifactId>http2-hpack</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Flyway DB migration (9.x bundles all DB drivers including PostgreSQL) -->
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<!-- H2 and PostgreSQL -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Actuator for health and metrics endpoints -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- Lombok for convenience -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- HTML sanitization for AI-generated content in emails -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.18.3</version>
		</dependency>

		<!-- Testing dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Testcontainers — used by *IT.java integration tests (requires Docker) -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!--
				Unit tests (maven-surefire-plugin): runs *Test.java files.
				Always executed during 'mvn test' and 'mvn verify'.
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<excludes>
						<!-- Exclude integration tests from the unit-test phase -->
						<exclude>**/*IT.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!--
				Integration tests (maven-failsafe-plugin): runs *IT.java files.
				Skipped by default because Testcontainers requires a Docker/container
				runtime which is not always available in CI environments.
				Enable with: mvn verify -Ptestcontainers
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<skipITs>${skipITs}</skipITs>
					<includes>
						<include>**/*IT.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
				<executions>
					<!--
						Writes META-INF/build-info.properties into the JAR at build time.
						Spring Boot auto-configures a BuildProperties bean from this file,
						which is read by AboutController to expose /api/about.
					-->
					<execution>
						<id>build-info</id>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				<execution>
					<id>report</id>
					<phase>test</phase>
					<goals>
						<goal>report</goal>
					</goals>
				</execution>
					<execution>
						<id>jacoco-check</id>
						<goals>
							<goal>check</goal>
						</goals>
				<configuration>
						<excludes>
							<!-- External integration wrappers that require live API access for meaningful coverage -->
							<exclude>com/anushibinj/veemailer/service/AiSummaryService.class</exclude>
							<exclude>com/anushibinj/veemailer/service/FilterService.class</exclude>
							<exclude>com/anushibinj/veemailer/service/OctaneCacheService.class</exclude>
							<exclude>com/anushibinj/veemailer/service/TicketCommentService.class</exclude>
						</excludes>
						<rules>
							<rule>
								<element>BUNDLE</element>
								<limits>
									<limit>
										<counter>INSTRUCTION</counter>
										<value>COVEREDRATIO</value>
										<minimum>0.83</minimum>
									</limit>
								</limits>
							</rule>
						</rules>
					</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!--
			Profile: testcontainers
			Activates Testcontainers-based integration tests (*IT.java).
			Requires a running Docker/container runtime (Docker Desktop, Rancher Desktop, Podman, etc.).
			Usage: mvn verify -Ptestcontainers
		-->
		<profile>
			<id>testcontainers</id>
			<properties>
				<skipITs>false</skipITs>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>
